Added Data Collector

--- a/sample_playlist_data.ipynb
+++ b/sample_playlist_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,13 +19,13 @@
     "\n",
     "client_credentials_manager = SpotifyClientCredentials(\n",
     "        \"26399552a8ce4d1285397254189cac50\",\n",
-    "        \"fdacbbba2dd34dbeb127dedb459f7ea3\")\n",
+    "        \"fdacfffa2dd34dbeb127dedb459f7ea3\")\n",
     "sp = spotipy.Spotify(client_credentials_manager=client_credentials_manager)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -90,22 +90,22 @@
       "track_id\n",
       "spotify:track:07f2b3CTdgKKlhv0mqUksz     667\n",
       "spotify:track:0C6bsQq58Ue1XfL5PKTO6D     649\n",
-      "spotify:track:0LPRq5I35z8FoqYo84xn48     933\n",
       "spotify:track:0Vl4eICpXMjtiK0RhdaWov     805\n",
       "spotify:track:0dv22i02nk3o8JwmK6BwjI     723\n",
       "spotify:track:0nbXyq5TXYPCO7pr3N8S4I     751\n",
       "spotify:track:0oFrTaO9UIgqu6MuzkFu7B     689\n",
       "spotify:track:0sf12qNH5qcw8qpgymFOqD     772\n",
       "spotify:track:0ui2kVwPZKHaZxGhdIzBrp     940\n",
-      "spotify:track:16wAOAZ2OkqoIDN7TpChjR     812\n",
       "spotify:track:1B89LtaW92jj4AqT7OZ0Fj     875\n",
       "spotify:track:1E1YyZjbteIz2XQyLvtRxD     759\n",
+      "spotify:track:1GHgDIODujliWFayEhHx1n     837\n",
       "spotify:track:1R4xkZXQUQ8QJtAdwHkSgC     651\n",
       "spotify:track:1V7JaMp11LKGwKiVmSetf0     678\n",
       "spotify:track:1hoLUVBx0ixX3kn0EX0P5n     692\n",
       "spotify:track:1rgnBhdG2JDFTbYkYRZAku     754\n",
       "spotify:track:24Yi9hE78yPEbZ4kxyoXAI     776\n",
-      "spotify:track:2GdDsXV5v47AZsuwtGjKKy     815\n",
+      "spotify:track:26rsUvXxz1wtraMXXcAxpE     613\n",
+      "spotify:track:2Fxmhks0bxGSBdJ92vM42m     786\n",
       "spotify:track:2PGA1AsJal6cyMNmKyE56q     760\n",
       "spotify:track:2RaKlveGCllSaXloN8kmzV     805\n",
       "spotify:track:2fzPZOozISzcAU7FSwkN7g     737\n",
@@ -114,11 +114,14 @@
       "spotify:track:36J10AwMabBYxgNrV2S8gd     752\n",
       "spotify:track:38YP1STiBe3AZevFFJILf4     707\n",
       "spotify:track:3H7ihDc1dqLriiWXwsc2po     671\n",
+      "spotify:track:3RgJvQlTg7tp5mXtylDXYx     650\n",
+      "spotify:track:3VFT90E0yYjdHSFoGv02us     924\n",
       "spotify:track:3ZCTVFBt2Brf31RLEnCkWJ     970\n",
       "spotify:track:3cqPu20DGTGUoZtbJH2Dmi     655\n",
       "spotify:track:3ecKtWMr8HK99YOs7L6Ps3     835\n",
       "spotify:track:4OVF6uwZlMOSlZmHDnwliX     831\n",
       "spotify:track:4TnjEaWOeW0eKTKIEvJyCa     558\n",
+      "spotify:track:4ejyZ4uJEXUURcgKp1kP8v    1490\n",
       "spotify:track:4umIPjkehX1r7uhmGvXiSV     932\n",
       "spotify:track:5XVPNr0CAoUn1jD033Ucoo     799\n",
       "spotify:track:5yY9lUy8nbvjM1Uyo1Uqoc    1054\n",
@@ -126,14 +129,11 @@
       "spotify:track:67ojvEGRPAUCOohuMPqoRC     812\n",
       "spotify:track:696DnlkuDOXcMAnKlTgXXK     674\n",
       "spotify:track:6JZrs7FFUkTpinCxM1DG3E     883\n",
-      "spotify:track:6Q2CA0eSQcQsue63QwnLnB     757\n",
+      "spotify:track:6LcauUZjF1eXQrgqMUecHX     581\n",
       "spotify:track:6WrI0LAC5M1Rw2MnX2ZvEg     764\n",
-      "spotify:track:6a1eOZTiZdgFRUOnMBjT4j     988\n",
       "spotify:track:6dNB3XdAzx7kTf5wa8Rg89     702\n",
       "spotify:track:6hw1Sy9wZ8UCxYGdpKrU6M     716\n",
-      "spotify:track:6mPETBNZFx2xjCR2YFPfcj     756\n",
       "spotify:track:73SpzrcaHk0RQPFP73vqVR     706\n",
-      "spotify:track:76IVpz47q3ghkxoUeTTEKb     832\n",
       "spotify:track:7CHi4DtfK4heMlQaudCuHK     583\n",
       "spotify:track:7Ek9e3eIuktIFjpDRQfmHE    1084\n",
       "spotify:track:7FIWs0pqAYbP91WWM0vlTQ    1033\n",
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -205,6 +205,20 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -223,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
