Added playlists and dropout, removed loudness and confidence
Added regularization in the form of dropout and added more playlists. Removed duplicates within country and songs found across countries. Added dropout and removed loudness and confidence. Val_acc reached .8780 after 50 epochs

--- a/Collect Data.ipynb
+++ b/Collect Data.ipynb
@@ -48,14 +48,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MX has 10 playlists\n",
-      "Getting track features for spotify:playlist:37i9dQZF1DX5BAPG29mHS8 in MX\n"
+      "MX has 11 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWZjqjZMudx9T in MX\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX3PsJxMtn1AP in MX\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX9KJJbsGEwfj in MX\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX05Q6G4VDGLq in MX\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWUmxBdWX3Pp4 in MX\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWY7LJpmTFjnp in MX\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWSXAHZTiX76o in MX\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXcWcRIYY41Ix in MX\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX01RK16gDPtA in MX\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX3woOVffrpln in MX\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4YhSbTs17ha in MX\n",
+      "TR has 10 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX32iTMwjM5Xf in TR\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWUplNWv18RoG in TR\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWT98dlN29E2W in TR\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWWISEYemjDXp in TR\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWXoHqNlfcLJb in TR\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWZ88lB6YFCc1 in TR\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWZaiuILgorJB in TR\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXa1qRoAAkUFs in TR\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX3RfxtU3KC3j in TR\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWYteTcNVQZNq in TR\n",
+      "US has 10 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWWBHeXOYZf74 in US\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWT6MhXz0jw61 in US\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX9RwfGbeGQwP in US\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWWwaxRea1LWS in US\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX0wMD4IoQ5aJ in US\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX2zAr9vdmFlU in US\n"
      ]
     }
    ],
    "source": [
-    "countriesOfInterest = [\"MX\", \"TR\", \"US\", \"CN\"]\n",
-    "for year in range(2000,2020):\n",
+    "countriesOfInterest = [\"MX\", \"TR\", \"US\"]\n",
+    "for year in range(2001,2020):\n",
     "    for month in range(1,13):\n",
     "        yrnmnth = str(year) + \"-\" + str(month)\n",
     "        tmstamp = yrnmnth + \"-15T12:00:00\"\n",
@@ -69,10 +97,42 @@
     "                currplist = sp.playlist(uri)\n",
     "                trackURI = []\n",
     "                for track in currplist[\"tracks\"][\"items\"]:\n",
-    "                    trackURI = trackURI + [track[\"track\"][\"uri\"]]\n",
+    "                    try:\n",
+    "                        trackURI = trackURI + [track[\"track\"][\"uri\"]]\n",
+    "                    except:\n",
+    "                        continue\n",
     "                print(\"Getting track features for\", uri, \"in\", countryCode)\n",
     "                trackData = getTrackFeatures(trackURI)\n",
     "                trackData.to_csv(\"Raw Track Data\\\\\" + countryCode + \"_\" + yrnmnth + \"_\" + uri[17:] + \".csv\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'added_at': '2020-02-27T15:04:54Z',\n",
+       " 'added_by': {'external_urls': {'spotify': 'https://open.spotify.com/user/'},\n",
+       "  'href': 'https://api.spotify.com/v1/users/',\n",
+       "  'id': '',\n",
+       "  'type': 'user',\n",
+       "  'uri': 'spotify:user:'},\n",
+       " 'is_local': False,\n",
+       " 'primary_color': None,\n",
+       " 'track': None,\n",
+       " 'video_thumbnail': None}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "track"
    ]
   },
   {
