--- a/Collect Data.ipynb
+++ b/Collect Data.ipynb
@@ -50,7 +50,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "79\n",
+      "27\n",
       "DZ has 15 playlists\n",
       "Getting track features for spotify:playlist:37i9dQZF1DX403FtPdcGpX in DZ\n"
      ]
@@ -69,7 +69,7 @@
     "SouthAmerica = ['AR', 'BO', 'BR', 'CL', 'CO', 'EC', 'PY', 'PE', 'UY']\n",
     "Oceania = ['AU', 'NZ']\n",
     "\n",
-    "countriesOfInterest = Africa + Asia + Europe + NorthAmerica + SouthAmerica + Oceania\n",
+    "countriesOfInterest = Africa + Asia + Oceania\n",
     "print(len(countriesOfInterest))\n",
     "for year in range(2000,2019):\n",
     "    tmstamp = str(year) + \"-06-15T12:00:00\"\n",
