Added loudness max back in

--- a/Collect Data-Copy1.ipynb
+++ b/Collect Data-Copy1.ipynb
@@ -52,7 +52,9 @@
      "text": [
       "52\n",
       "AD has 12 playlists\n",
-      "Getting track features for spotify:playlist:37i9dQZF1DX5bjCEbRU4SJ in AD\n"
+      "Getting track features for spotify:playlist:37i9dQZF1DX5bjCEbRU4SJ in AD\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4o1oenSJRJd in AD\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX7rOY2tZUw1k in AD\n"
      ]
     }
    ],
