--- a/Collect Data.ipynb
+++ b/Collect Data.ipynb
@@ -52,7 +52,11 @@
      "text": [
       "27\n",
       "DZ has 15 playlists\n",
-      "Getting track features for spotify:playlist:37i9dQZF1DX403FtPdcGpX in DZ\n"
+      "Getting track features for spotify:playlist:37i9dQZF1DX403FtPdcGpX in DZ\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX5pdHFmCpAKF in DZ\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWYHO8PTSQ9fM in DZ\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX5qgrUJCOKNp in DZ\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWZKucvJjqs4a in DZ\n"
      ]
     }
    ],
