Data collectors starting at 2019

--- a/Collect Data.ipynb
+++ b/Collect Data.ipynb
@@ -51,11 +51,7 @@
      "output_type": "stream",
      "text": [
       "27\n",
-      "DZ has 15 playlists\n",
-      "Getting track features for spotify:playlist:37i9dQZF1DX403FtPdcGpX in DZ\n",
-      "Getting track features for spotify:playlist:37i9dQZF1DX5pdHFmCpAKF in DZ\n",
-      "Getting track features for spotify:playlist:37i9dQZF1DWYHO8PTSQ9fM in DZ\n",
-      "Getting track features for spotify:playlist:37i9dQZF1DX5qgrUJCOKNp in DZ\n",
+      "DZ has 16 playlists\n",
       "Getting track features for spotify:playlist:37i9dQZF1DWZKucvJjqs4a in DZ\n"
      ]
     }
@@ -75,7 +71,7 @@
     "\n",
     "countriesOfInterest = Africa + Asia + Oceania\n",
     "print(len(countriesOfInterest))\n",
-    "for year in range(2000,2019):\n",
+    "for year in range(2019,2000, -1):\n",
     "    tmstamp = str(year) + \"-06-15T12:00:00\"\n",
     "    for countryCode in countriesOfInterest:\n",
     "        country = sp.featured_playlists(country = countryCode, limit = 50)\n",
@@ -101,7 +97,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for year in range(2019,2000, -1):\n",
+    "    print(year)"
+   ]
   },
   {
    "cell_type": "code",
