Added Keras model

--- a/Collect Data-Copy1.ipynb
+++ b/Collect Data-Copy1.ipynb
@@ -52,9 +52,8 @@
      "text": [
       "52\n",
       "AD has 12 playlists\n",
-      "Getting track features for spotify:playlist:37i9dQZF1DX5bjCEbRU4SJ in AD\n",
-      "Getting track features for spotify:playlist:37i9dQZF1DX4o1oenSJRJd in AD\n",
-      "Getting track features for spotify:playlist:37i9dQZF1DX7rOY2tZUw1k in AD\n"
+      "Getting track features for spotify:playlist:37i9dQZF1DX4xuWVBs4FgJ in AD\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX6GwdWRQMQpq in AD\n"
      ]
     }
    ],
@@ -73,7 +72,7 @@
     "\n",
     "countriesOfInterest = Europe + NorthAmerica + SouthAmerica\n",
     "print(len(countriesOfInterest))\n",
-    "for year in range(2000,2019):\n",
+    "for year in range(2019,2000, -1):\n",
     "    tmstamp = str(year) + \"-06-15T12:00:00\"\n",
     "    for countryCode in countriesOfInterest:\n",
     "        country = sp.featured_playlists(country = countryCode, limit = 50)\n",
