--- a/Collect Data.ipynb
+++ b/Collect Data.ipynb
@@ -52,7 +52,9 @@
      "text": [
       "27\n",
       "DZ has 16 playlists\n",
-      "Getting track features for spotify:playlist:37i9dQZF1DWZKucvJjqs4a in DZ\n"
+      "Getting track features for spotify:playlist:37i9dQZF1DWZKucvJjqs4a in DZ\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWYHO8PTSQ9fM in DZ\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX1X23oiQRTB5 in DZ\n"
      ]
     }
    ],
