Separated data preprocessing from model

--- a/Collect Data.ipynb
+++ b/Collect Data.ipynb
@@ -43,7 +43,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -54,7 +54,108 @@
       "DZ has 16 playlists\n",
       "Getting track features for spotify:playlist:37i9dQZF1DWZKucvJjqs4a in DZ\n",
       "Getting track features for spotify:playlist:37i9dQZF1DWYHO8PTSQ9fM in DZ\n",
-      "Getting track features for spotify:playlist:37i9dQZF1DX1X23oiQRTB5 in DZ\n"
+      "Getting track features for spotify:playlist:37i9dQZF1DX1X23oiQRTB5 in DZ\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX68x6hand0cN in DZ\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXd3AhRYJnfcl in DZ\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX0ysO3y1BFXN in DZ\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX5cO1uP1XC1g in DZ\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX1fzTwl8xjJf in DZ\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4rmnjMBxfCv in DZ\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXaHuo0R6jTxZ in DZ\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWYFV1CnuXO8v in DZ\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWUQM3rmTXpBR in DZ\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXdcjKKBPqh1t in DZ\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXe3aCmUoBd8n in DZ\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTTCCEjVC99N in DZ\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWYX0SFpLcPgx in DZ\n",
+      "EG has 17 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWYHBENPjyDpc in EG\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXd3AhRYJnfcl in EG\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWZKucvJjqs4a in EG\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX5cO1uP1XC1g in EG\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX1fzTwl8xjJf in EG\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4rmnjMBxfCv in EG\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXaHuo0R6jTxZ in EG\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWZyonhntyFxW in EG\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXd43GfSFAeHA in EG\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWYFV1CnuXO8v in EG\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWUQM3rmTXpBR in EG\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX905nNo3hBpt in EG\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXcC6YLqj8ET8 in EG\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWWhuJcTXO5hW in EG\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWU486KSiznWZ in EG\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTTCCEjVC99N in EG\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXdfYLmYuBPaf in EG\n",
+      "MA has 16 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWZKucvJjqs4a in MA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWYHO8PTSQ9fM in MA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX1X23oiQRTB5 in MA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX68x6hand0cN in MA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXd3AhRYJnfcl in MA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX0ysO3y1BFXN in MA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX5cO1uP1XC1g in MA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX1fzTwl8xjJf in MA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4rmnjMBxfCv in MA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXaHuo0R6jTxZ in MA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWYFV1CnuXO8v in MA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWUQM3rmTXpBR in MA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXdcjKKBPqh1t in MA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXe3aCmUoBd8n in MA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTTCCEjVC99N in MA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWYX0SFpLcPgx in MA\n",
+      "ZA has 18 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4eAPN4cy6BV in ZA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXbm6HfkbMtFZ in ZA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWUoBHp4pr8cg in ZA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX2yvmlOdMYzV in ZA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWZVU32KsYGUK in ZA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4VvfRBFClxm in ZA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX9wXOYagay8L in ZA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX9uKNf5jGX6m in ZA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXaLI8a395lse in ZA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWWW9iyuOPGds in ZA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXbIGqYf7WDxP in ZA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX8f6LHxMjnzD in ZA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXbXD9pMSZomS in ZA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWX0o6sD1a6P5 in ZA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX7cmFV9rWM0u in ZA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWVzZlRWgqAGH in ZA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX2jXop0wVJLZ in ZA\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX1aA8os1ylFZ in ZA\n",
+      "TN has 16 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWZKucvJjqs4a in TN\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWYHO8PTSQ9fM in TN\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX1X23oiQRTB5 in TN\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX68x6hand0cN in TN\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXd3AhRYJnfcl in TN\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX0ysO3y1BFXN in TN\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX5cO1uP1XC1g in TN\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX1fzTwl8xjJf in TN\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4rmnjMBxfCv in TN\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXaHuo0R6jTxZ in TN\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWYFV1CnuXO8v in TN\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWUQM3rmTXpBR in TN\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXdcjKKBPqh1t in TN\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXe3aCmUoBd8n in TN\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTTCCEjVC99N in TN\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWYX0SFpLcPgx in TN\n",
+      "BH has 20 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWWgW3m1g7KmT in BH\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWZKucvJjqs4a in BH\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXdj3JotSexPH in BH\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWU486KSiznWZ in BH\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTvNyxOwkztu in BH\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXd3AhRYJnfcl in BH\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX0ysO3y1BFXN in BH\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX5cO1uP1XC1g in BH\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX1fzTwl8xjJf in BH\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX5BeS7oLnHFo in BH\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4rmnjMBxfCv in BH\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWYFV1CnuXO8v in BH\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX2nX8HgBDmgL in BH\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXaDry6yZJJeW in BH\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXaHuo0R6jTxZ in BH\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWUQM3rmTXpBR in BH\n"
      ]
     }
    ],
