--- a/Collect Data-Copy1.ipynb
+++ b/Collect Data-Copy1.ipynb
@@ -43,7 +43,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -53,7 +53,94 @@
       "52\n",
       "AD has 12 playlists\n",
       "Getting track features for spotify:playlist:37i9dQZF1DX4xuWVBs4FgJ in AD\n",
-      "Getting track features for spotify:playlist:37i9dQZF1DX6GwdWRQMQpq in AD\n"
+      "Getting track features for spotify:playlist:37i9dQZF1DX6GwdWRQMQpq in AD\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX82pCGH5USnM in AD\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWY4xHQp97fN6 in AD\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX9XIFQuFvzM4 in AD\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXbYM3nMM0oPk in AD\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX1rVvRgjX59F in AD\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXcBWIGoYBM5M in AD\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTJ7xPn4vNaz in AD\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTwnEm1IYyoj in AD\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4TnpT6vw5rE in AD\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTDafB3skWPN in AD\n",
+      "AT has 12 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXaIrEwuQ3hyy in AT\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX07Bg0Q5GozA in AT\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX52oZiy8mdjZ in AT\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWYUYYlhkTuEn in AT\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWVgfADJapICT in AT\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX1htCFhfVtyK in AT\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX2lUf1uE6Mre in AT\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX8hcTuUCeYxa in AT\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWVzZlRWgqAGH in AT\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWUPH9einijpy in AT\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWZESE3fHLhmD in AT\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX2YSAZIuAiB1 in AT\n",
+      "BE has 12 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX6IL6KMs4LF0 in BE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX1kfybUJZB6S in BE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXadhN5awWZtL in BE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWSq1nQilUgG8 in BE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX5R3z561bD4F in BE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWYPwGkJoztcR in BE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXbB7yFaZiAQX in BE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX9u7XXOp0l5L in BE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTwCImwcYjDL in BE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWWMOmoXKqHTD in BE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXdrln2UyZD7F in BE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX1X23oiQRTB5 in BE\n",
+      "BG has 12 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4xuWVBs4FgJ in BG\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX6GwdWRQMQpq in BG\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX82pCGH5USnM in BG\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWY4xHQp97fN6 in BG\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX9XIFQuFvzM4 in BG\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXbYM3nMM0oPk in BG\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX1rVvRgjX59F in BG\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXcBWIGoYBM5M in BG\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTJ7xPn4vNaz in BG\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTwnEm1IYyoj in BG\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4TnpT6vw5rE in BG\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTDafB3skWPN in BG\n",
+      "CY has 12 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4xuWVBs4FgJ in CY\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX6GwdWRQMQpq in CY\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX82pCGH5USnM in CY\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWY4xHQp97fN6 in CY\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX9XIFQuFvzM4 in CY\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXbYM3nMM0oPk in CY\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX1rVvRgjX59F in CY\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXcBWIGoYBM5M in CY\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTJ7xPn4vNaz in CY\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTwnEm1IYyoj in CY\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4TnpT6vw5rE in CY\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTDafB3skWPN in CY\n",
+      "CZ has 12 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4xuWVBs4FgJ in CZ\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX6GwdWRQMQpq in CZ\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX82pCGH5USnM in CZ\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWY4xHQp97fN6 in CZ\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX9XIFQuFvzM4 in CZ\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXbYM3nMM0oPk in CZ\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX1rVvRgjX59F in CZ\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXcBWIGoYBM5M in CZ\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTJ7xPn4vNaz in CZ\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTwnEm1IYyoj in CZ\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4TnpT6vw5rE in CZ\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTDafB3skWPN in CZ\n",
+      "DK has 14 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWVP7hsHdUqxf in DK\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTMVK39I3IIK in DK\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX9ohTzPBULT8 in DK\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWXBQyF1RJj8Y in DK\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWY8U6Zq7nvbE in DK\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4nkDUiMktkK in DK\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWUuQAo5SmZL4 in DK\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX5622XLsm5RS in DK\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX1jpbl6jf4NJ in DK\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX6ThoxooFoGK in DK\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX9XiAcF7t1s5 in DK\n"
      ]
     }
    ],
